--- a/TP_final parte 2 Redes LSTM.ipynb
+++ b/TP_final parte 2 Redes LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c0e694ff",
+   "id": "9bd4a57e",
    "metadata": {},
    "source": [
     "## 9. Redes neuronales LSTM"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71f4f46f",
+   "id": "beddafba",
    "metadata": {},
    "source": [
     "En esta parte vamos a probar con una red neuronal para poder hacer predicciones de la serie temporal."
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 588,
-   "id": "eac40872",
+   "id": "30ffde55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "2c018fa3",
+   "id": "08860475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f56a198",
+   "id": "3e437fc1",
    "metadata": {},
    "source": [
     "### 9.1 Carga de datos"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "34298f6d",
+   "id": "5467fac5",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "cd9aa233",
+   "id": "556edd39",
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d08c79",
+   "id": "4cf76c15",
    "metadata": {},
    "source": [
     "### 9.2 Preparación de los datos para la red"
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07426efc",
+   "id": "a490e6eb",
    "metadata": {},
    "source": [
     "nos quedamos con la variable 'Close' y armamos nuesta serie para poder pre-procesarla para la red"
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "d627cc76",
+   "id": "9622eaf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "e8eae4b4",
+   "id": "de8a6924",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "id": "9160eabf",
+   "id": "259d324f",
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3c73d1c",
+   "id": "fe8ef774",
    "metadata": {},
    "source": [
     "Pasamos el dataset a float32 y normalizamos de 0 a 1."
@@ -1238,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": 482,
-   "id": "75117704",
+   "id": "ae041016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": 483,
-   "id": "6d955e73",
+   "id": "f02bc9f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c62eb077",
+   "id": "1f174050",
    "metadata": {},
    "source": [
     "Dividimos el dataset para entrenamiento y test"
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 563,
-   "id": "92b017b7",
+   "id": "cc602d7a",
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12c475e5",
+   "id": "ab83da43",
    "metadata": {},
    "source": [
     "Creamos una función que tiene dos argumentos: el dataset y un look back que es el número de pasos hacia atrás que se toman en cuenta para hacer la predicción del paso siguiente."
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 647,
-   "id": "8218a712",
+   "id": "682c1dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0faee46b",
+   "id": "afa4965f",
    "metadata": {},
    "source": [
     "Elijo el tamaño de la ventana deslizante. Teniendo en cuenta el periodograma y viendo que tengo dos ciclos marcados (cada 12 puntos y cada 3 puntos) elijo una ventana deslizante de 3 que no es demasiado grande puede capturar los ciclos dentro de la serie."
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 660,
-   "id": "a92b2068",
+   "id": "7903c98f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 661,
-   "id": "905ad390",
+   "id": "4a639a19",
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 662,
-   "id": "843de04f",
+   "id": "a9004595",
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d9f3309",
+   "id": "ff38680c",
    "metadata": {},
    "source": [
     "Podemos ver como acabamos de construir un dataset que a cada 3 paso de X se \"predice\" 1 paso en Y. "
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 663,
-   "id": "44357745",
+   "id": "290d887f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 664,
-   "id": "d11eec18",
+   "id": "33c6fadf",
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 665,
-   "id": "0b947ea3",
+   "id": "4071581d",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed3b8d4",
+   "id": "7169e703",
    "metadata": {},
    "source": [
     "### 9.3 Creación de la red neuronal"
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4921d176",
+   "id": "8e47db3a",
    "metadata": {},
    "source": [
     "#### 9.3.1 Modelo 1"
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 424,
-   "id": "b9c235b9",
+   "id": "72fc6b6a",
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": 539,
-   "id": "e4f2745c",
+   "id": "81f7fde4",
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 540,
-   "id": "2afb528e",
+   "id": "563e0467",
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9742b6bf",
+   "id": "9c4298a6",
    "metadata": {},
    "source": [
     "Tenemos que \"desnormalizar\" los datos para poder hacer predicciones en la misma escala de los datos originales."
@@ -1569,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 541,
-   "id": "e15b6c9d",
+   "id": "3d459ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe588aa9",
+   "id": "68b69721",
    "metadata": {},
    "source": [
     "Calculamos el RMSE tanto para Train como para Test"
@@ -1590,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": 542,
-   "id": "419e15de",
+   "id": "9fdb4383",
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 543,
-   "id": "8d162f46",
+   "id": "1be41856",
    "metadata": {},
    "outputs": [
     {
@@ -2613,7 +2613,7 @@
   {
    "cell_type": "code",
    "execution_count": 544,
-   "id": "ad82cac0",
+   "id": "7bf92ed4",
    "metadata": {},
    "outputs": [
     {
@@ -3613,7 +3613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e8f5b71",
+   "id": "65d78b60",
    "metadata": {},
    "source": [
     "Graficamos la Loss"
@@ -3622,7 +3622,7 @@
   {
    "cell_type": "code",
    "execution_count": 545,
-   "id": "e7d13f28",
+   "id": "1335d062",
    "metadata": {},
    "outputs": [
     {
@@ -4614,7 +4614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bfa5fc3",
+   "id": "a5735de5",
    "metadata": {},
    "source": [
     "#### 9.3.2 Modelo 2\n",
@@ -4625,7 +4625,7 @@
   {
    "cell_type": "code",
    "execution_count": 571,
-   "id": "af5740ca",
+   "id": "addf0911",
    "metadata": {},
    "outputs": [
     {
@@ -4674,7 +4674,7 @@
   {
    "cell_type": "code",
    "execution_count": 555,
-   "id": "dfdbc901",
+   "id": "3843c6b4",
    "metadata": {},
    "outputs": [
     {
@@ -4711,7 +4711,7 @@
   {
    "cell_type": "code",
    "execution_count": 556,
-   "id": "59c73a57",
+   "id": "7a957565",
    "metadata": {},
    "outputs": [
     {
@@ -4731,7 +4731,7 @@
   {
    "cell_type": "code",
    "execution_count": 557,
-   "id": "0a125c5b",
+   "id": "bbfe5aa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4744,7 +4744,7 @@
   {
    "cell_type": "code",
    "execution_count": 558,
-   "id": "2801e989",
+   "id": "7d916fec",
    "metadata": {},
    "outputs": [
     {
@@ -4766,7 +4766,7 @@
   {
    "cell_type": "code",
    "execution_count": 559,
-   "id": "db946f6d",
+   "id": "faf8f1e3",
    "metadata": {},
    "outputs": [
     {
@@ -5767,7 +5767,7 @@
   {
    "cell_type": "code",
    "execution_count": 560,
-   "id": "2963e812",
+   "id": "27188d12",
    "metadata": {},
    "outputs": [
     {
@@ -6757,7 +6757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78ada316",
+   "id": "cfebb3bb",
    "metadata": {},
    "source": [
     "#### 9.3.3 Modelo 3\n",
@@ -6768,7 +6768,7 @@
   {
    "cell_type": "code",
    "execution_count": 666,
-   "id": "a1b23a45",
+   "id": "d950d2f2",
    "metadata": {},
    "outputs": [
     {
@@ -6805,7 +6805,7 @@
   {
    "cell_type": "code",
    "execution_count": 667,
-   "id": "a6cf7305",
+   "id": "9a97e51c",
    "metadata": {},
    "outputs": [
     {
@@ -6842,7 +6842,7 @@
   {
    "cell_type": "code",
    "execution_count": 668,
-   "id": "00cbe3c5",
+   "id": "2f18ff54",
    "metadata": {},
    "outputs": [
     {
@@ -6862,7 +6862,7 @@
   {
    "cell_type": "code",
    "execution_count": 669,
-   "id": "e6900e06",
+   "id": "9236437d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6875,7 +6875,7 @@
   {
    "cell_type": "code",
    "execution_count": 670,
-   "id": "bce08296",
+   "id": "ebf597a8",
    "metadata": {},
    "outputs": [
     {
@@ -6903,7 +6903,7 @@
   {
    "cell_type": "code",
    "execution_count": 671,
-   "id": "58c2532f",
+   "id": "611b7e75",
    "metadata": {},
    "outputs": [
     {
@@ -7904,7 +7904,7 @@
   {
    "cell_type": "code",
    "execution_count": 672,
-   "id": "5cc14f3c",
+   "id": "a9c2289d",
    "metadata": {},
    "outputs": [
     {
@@ -8894,7 +8894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b89a47",
+   "id": "0d19f5ae",
    "metadata": {},
    "source": [
     "### 9.4 Conclusión:\n",
@@ -8913,7 +8913,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9255c8d8",
+   "id": "a9a5a304",
    "metadata": {},
    "source": [
     "## 10. Comparación de modelos (S)ARIMA y LSTM"
@@ -8921,7 +8921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc992af7",
+   "id": "88512667",
    "metadata": {},
    "source": [
     "Haremos la comparación de las métricas de los siguientes modelos:\n",
@@ -8938,8 +8938,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aea8088c",
+   "id": "924d071d",
    "metadata": {},
+   "source": [
+    "## 11. Conclusiones\n",
+    "\n",
+    "-Para este problema particular puede ser que la red neuronal se ajuste mejor. Dado que el precio del café requiere de un seguimiento día a día, el ajuste punto a punto que tiene la red neuronal es mucho más preciso.\n",
+    "\n",
+    "-El modelo (S)ARIMA nos arroja información importante si lo que se busca es conocer el comportamiento a largo plazo del precio. Es un modelo mucho más económico computacionalmente que arroja información suficiente si nos interesa predecir la tendencia. \n",
+    "\n",
+    "-Para la red neuronal siempre será importante la cantidad de datos, en ese caso ante una posible falta de datos, el modelo (S)ARIMA sigue siendo una buena fuente de información."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42a2464d",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
